<resources>
    <string name="app_name">智能驾驶助手</string>
    <string name="title_music">音乐</string>
    <string name="title_navigation">导航</string>
    <string name="title_mine">我的</string>
    <string name="title_home">首页</string>
    <string name="title_find">新闻</string>
    <string name="title_display">Display</string>
    <string name="title_control">Control</string>
    <string name="car_pressure">2.4bar</string>
    <string name="car_state">"汽车启动状态"</string>
    <string name="car_window_state">"车窗状态"</string>
    <string name="car_lock_state">"车锁状态"</string>
    <string name="car_remain_power">"剩余电量:"</string>
    <string name="car_power">"%"</string>
    <string name="car_travel_num">"可行驶公里数:"</string>
    <string name="car_kilometer">KM</string>
    <string name="car_real_door">"关闭后备箱"</string>
    <string name="car_close_window">"一键关窗"</string>
    <string name="car_lock">"关锁"</string>
    <string name="car_start">"启动"</string>
    <string name="tcp_socket">"通信"</string>
    <string name="tcp_return">"返回"</string>

    <string name="event_msg_open_success">打开端口成功！</string>
    <string name="event_msg_close_success">关闭端口成功！</string>
    <string name="event_msg_access_success">客户端接入成功！</string>
    <string name="event_msg_open_error">打开端口失败！</string>
    <string name="event_msg_open_timeout">连接超时！</string>
    <string name="event_msg_network_break_off">网络断开！</string>
    <string name="event_msg_send_error">发送失败！</string>
    <string name="event_msg_receive_error">接收失败！</string>
    <string name="event_msg_client_accept_error">客户端接入失败！</string>
    <string name="event_msg_unknown_error">未知网络错误！</string>
    <string name="main_activity_local_receive_port">本地接收端口</string>
    <string name="main_activity_remote_ip">远端IP</string>
    <string name="main_activity_clear">清除</string>
    <string name="main_activity_start_service">启动网络服务</string>
    <string name="main_activity_service_not_start">网络服务未启动</string>
    <string name="main_activity_service_running">网络服务运行中</string>
    <string name="main_activity_send">发送</string>
    <string name="main_activity_default_port">6000</string>
    <string name="main_activity_default_ip">10.0.2.2</string>
    <string name="main_activity_remote_port">Port</string>
    <string name="main_activity_type_udp">UDP</string>
    <string name="main_activity_type_tcp_client">TCP Client</string>
    <string name="main_activity_type_tcp_server">TCP Server</string>
    <string name="information">车辆信息</string>
    <string name="type">车辆类型</string>
    <string name="number">车牌号</string>
    <string name="release">发布</string>
    <string name="brand">汽车品牌</string>
    <string name="complete">修改完成</string>
    <string name="phone">手机号</string>
    <string name="sex">性别</string>
    <string name="name">用户名</string>
    <string name="head">头 像</string>
    <string name="age">年龄</string>
    <string name="exit">退出登录</string>
    <string name="updata">修改信息</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="register">注册账号</string>
    <string name="remember">是否记住密码</string>
    <string name="six">Six</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>


    <string name="slide_1_title">Lonely</string>
    <string name="slide_2_title">Meet</string>
    <string name="slide_3_title">Fall in love at first sight</string>
    <string name="slide_4_title">Both fall in love</string>
    <string name="slide_5_title">Together forever</string>
    <string name="play_again">play again</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--语音识别-->
    <string name="please_speak">请说话</string>
    <string name="speaking">说话中</string>
    <string name="cancel">取消</string>
    <string name="start">开始</string>
    <string name="setting">设置</string>


    <string name="infile_default"></string>
    <string-array name="infile_list">
        <item>@string/infile_default</item>
        <item>res:///com/baidu/android/voicedemo/16k_test.pcm, 16k采样的测试音频</item>
        <item>res:///com/baidu/android/voicedemo/offline_input.pcm, 测试离线命令词</item>
        <item>#com.baidu.aip.asrwakeup3.core.inputstream.InFileStream.create16kStream(), 文件流</item>
        <item>#com.baidu.aip.asrwakeup3.core.inputstream.MyMicrophoneInputStream.getInstance(), 自行从麦克风读取</item>
    </string-array>

    <string name="decoder_default"></string>
    <string-array name="decoder_list">
        <item>@string/decoder_default</item>
        <item>0, 纯在线</item>
        <item>2, 离线命令词及在线识别混合, 在线优先</item>
    </string-array>

    <string name="pid_default"></string>
    <string-array name="pid">
        <item>@string/pid_default</item>
        <item>1537, 普通话输入法模型(默认) </item>
        <item>15372, 普通话输入法模型(后处理带标点) </item>
        <item>15373, 普通话输入法模型(在线语义) </item>
        <item>8001, 自训练平台输入法模型</item>
        <item>8002, 自训练平台搜索模型</item>
        <item>1936, 普通话远场模型 </item>
        <item>19362,普通话远场模型（后处理带标点） </item>
        <item>19363,普通话远场模型（在线语义） </item>
        <item>1737, 英语</item>
        <item>1637, 粤语</item>
        <item>16372, 粤语（后处理带标点）</item>
        <item>1837, 四川话</item>
    </string-array>
    <string name="lm_id_default"></string>
    <string-array name="lm_id">
        <item>@string/lm_id_default</item>
        <item>1068, 自训练平台上线的id，和账号维度绑定</item>
    </string-array>

    <string name="nlu_default"></string>
    <string-array name="nlu_list">
        <item>@string/nlu_default</item>
        <item>enable, 开启本地语义解析（不支持英语）</item>
        <item>enable-all, 在enable参数基础上,临时解析结果也做本地语义分析</item>
        <item>disable, 不适用语义解析</item>
    </string-array>

    <string name="vad_default"></string>
    <string-array name="vad_list">
        <item>@string/vad_default</item>
        <item>dnn, 默认，推荐模型</item>
        <item>touch,  关闭静音断句功能。用戶手动停止录音</item>
    </string-array>
    <string name="_model_default"></string>
    <string name="vad_timeout_default"></string>
    <string-array name="vad_timeout_list">
        <item>@string/vad_timeout_default</item>
        <item>0, 开启长语音（离线不支持）。建议pid选择15372。</item>
        <item>800, 毫秒，静音800ms后断句，适用于输入短语</item>
        <item>2000, 毫秒，静音2000ms后断句，适用于输入长句</item>
        <item>2230, 毫秒，请修改代码中的VAD_ENDPOINT_TIMEOUT，自定义时长（建议800ms-3000ms之间）</item>
    </string-array>
    <string name="punctuation_mode_default"></string>
    <string-array name="punctuation_mode_list">
        <item>@string/punctuation_mode_default</item>
        <item>0, 默认，打开后处理标点</item>
        <item>1, 关闭后处理标点</item>
        <item>2, 删除句末标点</item>
        <item>3, 将所有标点替换为空格</item>
    </string-array>
</resources>

