<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_music"
        android:icon="@drawable/ic_baseline_music_note_24"
        android:title="@string/title_music" />
    <item
        android:id="@+id/navigation_navigation"
        android:icon="@drawable/ic_baseline_navigation_24"
        android:title="@string/title_navigation" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_find"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_find" />
    <item
        android:id="@+id/navigation_identity"
        android:icon="@drawable/ic_baseline_perm_identity_24"
        android:title="@string/title_mine" />

</menu>