<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutControl"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgViewReal"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_Car"
        app:layout_constraintStart_toEndOf="@+id/imageView_Car"
        app:layout_constraintTop_toTopOf="@+id/imageView_Car" />

    <Button
        android:id="@+id/button_car_real_door"
        android:layout_width="148dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:background="#CDDC39"
        android:text="@string/car_real_door"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgViewLF" />






    <Button
        android:id="@+id/button_close_window"
        android:layout_width="148dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:background="#35DDF3"
        android:text="@string/car_close_window"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_car_real_door" />



    <Button
        android:id="@+id/button_lock"
        android:layout_width="148dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:background="#63F863"
        android:text="@string/car_lock"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_close_window" />



    <Button
        android:id="@+id/button_start"
        android:layout_width="168dp"
        android:layout_height="76dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#00FF05"
        android:text="@string/car_start"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_lock"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
